BOARD18 1.2.0 Release Notes

Changes from 1.1.5 Release:

* Implemented issue 43 - Increase the maximum size of some  
  fields in the BOARD18 database. If upgrading from a 1.1.x 
  release, please see the notice about database changes at:
  http://wiki.board18.org/w/Two_Table_Fixes_for_release_1.2.x 

* Fixed BOARD18update utility.

BOARD18 1.1.5 Release Notes

Changes from 1.1.4 Release:

* Fix bug in board18Players1.js.

BOARD18 1.1.4 Release Notes

Changes from 1.1.3 Release:

* Implemented issue 27 Phase 2 - board18Players.php.

BOARD18 1.1.3 Release Notes

Changes from 1.1.2 Release:

* Improved the snapshot functions added in 1.1.2.

* Implemented issue 27 Phase 1 - board18Admin.php.

BOARD18 1.1.2 Release Notes

Changes from 1.1.1 Release:

* Removed invalid error handling code from loadBox function in
  board18Map2.js and board18Market2.js.

* Removed invalid error handling code from loadSession function in
  board18Map2.js and board18Market2.js.

* Implemented issue 27 Phase 1 in newUser.php - Make first player level "admin".

BOARD18 1.1.1 Release Notes

Changes from 1.1.0 Release:

* Fixed bug 42 - Invalid backout of token delete.

* Fixed loadAllBoxes utility.

* Added BOARD18update utility.

* Updated BOARD18/website index.html file

BOARD18 1.1.0 Release Notes

Changes from 1.0.1 Release:

* Implemented issue 28 - Create a Checkpoint/Revert Function.

* Made some other minor aesthetic code upgrades.

BOARD18 1.0.1 Release Notes

Changes from 1.0.0 Release:

* Fixed issue 38 - Placement problem with token selection popup. 

BOARD18 1.0.0 Release Notes

Changes from 0.6.0 Release:

* Fixed issue 34 - Make all database changes to support pending 
  client side enhancements. 

* Fixed issue 31 - Game over enhancement. 

BOARD18 0.6.0 Release Notes

Changes from 0.5.0 Release:

* Fixed issue 33 - Support hexes in both orientations. 

* Fixed bug in the addJSONtoBox.php utility.

BOARD18 0.5.0 Release Notes

Changes from 0.4.0 Release:
