@@ -30,3 +30,4 @@ documentation/*~
 /images/ForthAge-JCR01/
 /utility/control/FourthAge-JCR01.json
 /images/FourthAge-JCR01/
+/images/FourthAge-JCR02/
