@@ -1,3 +1,9 @@
+BOARD18 1.2.1 Release Notes
+
+Changes from 1.2.0 Release:
+
+* Fixed security vulnerability in board18Players.
+
 BOARD18 1.2.0 Release Notes
 
 Changes from 1.1.5 Release:
